# ImageOptimizer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
ConsoleApp/: ConsoleApp.cpp  ConsoleApp.vcxproj  ConsoleApp.vcxproj.filters  Options.h  Release.bat  cxxopts.hpp
ImageOptimizer/: ImageOptimizer.sln  ImageOptimizer.vcxproj  ImageOptimizer.vcxproj.filters
ImageOptimizer/Include/: ImageOptimizer.h  ImageProcessor.h  ImageSimilarity.h  Logger.h  OptimizationResult.h  Quality.h  Severity.h
ImageOptimizer/Source/: ImageOptimizer.cpp  ImageOptimizer.h  ImageOptimizerImplementation.cpp  ImageOptimizerImplementation.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorImplementation.cpp  ImageProcessorImplementation.h  ImageSimilarity.cpp  ImageSimilarity.h  JpegEncoderDecoder.cpp  JpegEncoderDecoder.h  Logger.cpp  Logger.h  OptimizationResult.cpp  OptimizationResult.h  OptimizationSequence.cpp  OptimizationSequence.h  Quality.h  Severity.cpp
apps/: CMakeLists.txt
apps/console/: console.cpp  options.hpp  utils.hpp
docs/: CMakeLists.txt  mainpage.md
include/iopt/: image.hpp  image_optimizer.hpp  image_similarity.hpp  optimization_result.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  image_optimizer.cpp  image_processor.cpp  image_processor.hpp  image_similarity.cpp  jpeg.cpp  jpeg.hpp  logger.cpp  optimization_result.cpp  optimization_sequence.cpp  optimization_sequence.hpp  quality.hpp
test/: CMakeLists.txt  i_opt_test.cpp
